﻿13.1.0
	* Added Helpers.Random.GetBoolean().
	* Added Helpers.Random.GetWords() with length limit.
	* Added more words to random test data words.

13.0.0
	* .NET Framework specific features now require 4.7.2 because it is 2019.
	* Updated NLog dependency to latest stable.
	* Added Helpers.Argument.ValidateLength<T>() generic overload.

12.1.2
	* WeakEventListener is now thread-safe.

12.1.1
	* Fixed crash due to overflow when comparing GrpcAddress.

12.1.0
	* Addewd GrpcAddress.

12.0.0
	* Added ExtensionsForCollections.Shuffle().
	* TestClass -> BaseTestClass to reduce naming conflicts.

11.2.1
	* .NET Core 2.1 compatibility for ExternalTool. They changed an exception type.

11.2.0
	* Wildcard now supports multiple patterns as alternatives.

11.1.1
	* Performance optimizations for CompositingStream.

11.1.0
	* Added ExtensionsForTask.LogExceptions() for easy exception logging without having to await.

11.0.0
	* Removed Helpers.Timeout.GetCancellationToken() as it used some bad practices for CTS lifetime management.
	* ExternalTool now supports asynchronous usage.

10.0.4
	* ExternalTool now closes standard input after use, to signal apps that all input has been provided.

10.0.3
	* Helpers.Filesystem.GetBinDirectory() now also works for development environment .NET Core apps.

10.0.2
	* Helpers.Filesystem.GetBinDirectory() now also works for web apps.

10.0.0
	* Targeting .NET Standard 2.0 with primary library. This moved a fair amount of types around, beware!
	* Axinom.Toolkit.DotNet assembly renamed to Axinom.Toolkit.NetFramework to better reflect its platform.
	* Removed some super obsolete stuff not used in 5 years. Most things survived the porting (NS 2.0 is pretty good).
	* Added changelog to documentation website.
	* Helpers.Async.BackgroundThreadInvoke() now returns a Task for the created operation.
	* Helpers.Argument.ValidateIsNotNullOrEmpty() supports more types of collections.